resources/tests/parser/bad/var_def.gshl
var a =
var a += 3
var

var 3
var "qwe"
var a 3 2 5
var;
var var
var a = =
